{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 73,
  "lineage": "aff5b368-5ff8-9a63-b2ae-880e69c87682",
  "resources": [
    {
      "module": "module.cloudsql",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.193.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-12-09T00:02:40.626-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/baoafrik-staging/global/addresses/baoafrik-staging-db-priv-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "baoafrik-staging-db-priv-ip",
            "network": "https://www.googleapis.com/compute/v1/projects/baoafrik-staging/global/networks/baoafrik-staging-vpc",
            "prefix_length": 16,
            "project": "baoafrik-staging",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/baoafrik-staging/global/addresses/baoafrik-staging-db-priv-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute_staging",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "staging",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251203",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/baoafrik-staging/zones/europe-north2-a/disks/baoafrik-staging-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "creation_timestamp": "2025-12-09T00:23:51.728-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/baoafrik-staging/zones/europe-north2-a/instances/baoafrik-staging-instance",
            "instance_id": "6285731563294057080",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "8nwHMNscfP4=",
            "name": "baoafrik-staging-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.51.243.86",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/baoafrik-staging/global/networks/baoafrik-staging-vpc",
                "network_ip": "200.0.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/baoafrik-staging/regions/europe-north2/subnetworks/baoafrik-staging-vpc-public",
                "subnetwork_project": "baoafrik-staging"
              }
            ],
            "project": "baoafrik-staging",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/baoafrik-staging/zones/europe-north2-a/instances/baoafrik-staging-instance",
            "service_account": [
              {
                "email": "baoafrik-staging-app-sa@baoafrik-staging.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-egress",
              "baoafrik-backend-vm"
            ],
            "tags_fingerprint": "npxaqfCSBRo=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-north2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.google_service_account.app",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5432"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-10T09:12:20.182-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/baoafrik-staging/global/firewalls/baoafrik-staging-vpc-allow-db",
            "log_config": [],
            "name": "baoafrik-staging-vpc-allow-db",
            "network": "https://www.googleapis.com/compute/v1/projects/baoafrik-staging/global/networks/baoafrik-staging-vpc",
            "params": [],
            "priority": 1000,
            "project": "baoafrik-staging",
            "self_link": "https://www.googleapis.com/compute/v1/projects/baoafrik-staging/global/firewalls/baoafrik-staging-vpc-allow-db",
            "source_ranges": [
              "200.0.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "cloud-sql"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-12-10T09:12:20.200-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/baoafrik-staging/global/firewalls/baoafrik-staging-vpc-allow-egress",
            "log_config": [],
            "name": "baoafrik-staging-vpc-allow-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/baoafrik-staging/global/networks/baoafrik-staging-vpc",
            "params": [],
            "priority": 1000,
            "project": "baoafrik-staging",
            "self_link": "https://www.googleapis.com/compute/v1/projects/baoafrik-staging/global/firewalls/baoafrik-staging-vpc-allow-egress",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-egress"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443",
                  "8080",
                  "3000",
                  "3001"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-08T23:37:36.023-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/baoafrik-staging/global/firewalls/baoafrik-staging-vpc-allow-web",
            "log_config": [],
            "name": "baoafrik-staging-vpc-allow-web",
            "network": "https://www.googleapis.com/compute/v1/projects/baoafrik-staging/global/networks/baoafrik-staging-vpc",
            "params": [],
            "priority": 1000,
            "project": "baoafrik-staging",
            "self_link": "https://www.googleapis.com/compute/v1/projects/baoafrik-staging/global/firewalls/baoafrik-staging-vpc-allow-web",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/baoafrik-staging/global/networks/baoafrik-staging-vpc",
            "mtu": 0,
            "name": "baoafrik-staging-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "5889318219450838876",
            "numeric_id": "5889318219450838876",
            "project": "baoafrik-staging",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/baoafrik-staging/global/networks/baoafrik-staging-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-08T23:37:39.079-08:00",
            "gateway_address": "200.0.1.1",
            "id": "projects/baoafrik-staging/regions/europe-north2/subnetworks/baoafrik-staging-vpc-private",
            "ip_cidr_range": "200.0.1.0/24",
            "name": "baoafrik-staging-vpc-private",
            "network": "https://www.googleapis.com/compute/v1/projects/baoafrik-staging/global/networks/baoafrik-staging-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "baoafrik-staging",
            "purpose": "PRIVATE",
            "region": "europe-north2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/baoafrik-staging/regions/europe-north2/subnetworks/baoafrik-staging-vpc-private",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": -1214615764
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-08T23:37:40.740-08:00",
            "gateway_address": "200.0.0.1",
            "id": "projects/baoafrik-staging/regions/europe-north2/subnetworks/baoafrik-staging-vpc-public",
            "ip_cidr_range": "200.0.0.0/24",
            "name": "baoafrik-staging-vpc-public",
            "network": "https://www.googleapis.com/compute/v1/projects/baoafrik-staging/global/networks/baoafrik-staging-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "baoafrik-staging",
            "purpose": "PRIVATE",
            "region": "europe-north2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/baoafrik-staging/regions/europe-north2/subnetworks/baoafrik-staging-vpc-public",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": -1214615765
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}